--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
-            height: 98vh;
-            background-color: black;
+            height: 100vh;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+            /*Shorthand - background
+                color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center / cover no-repeat fixed;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +34,10 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, dolorum. Quas, porro quia sint ab soluta odit, assumenda optio magnam non vitae enim odio consectetur quisquam. Cumque voluptates tenetur ex. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium consequuntur veritatis, aut recusandae nam laborum dolores modi voluptas distinctio cum nesciunt maiores. Doloremque nam quidem repudiandae, dignissimos minus earum veniam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis totam consectetur expedita dolorem aut porro magnam nobis veritatis quaerat, accusantium ducimus rerum maiores labore tenetur est vero quas! Veniam, ipsum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus vitae autem voluptates fugiat possimus placeat eligendi adipisci eum deserunt quisquam magnam quidem inventore, cupiditate repellat. Repudiandae iste nulla sit fugiat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum explicabo, iste molestias delectus corporis ut recusandae porro officia sapiente doloremque repudiandae nemo beatae animi repellendus, quo vitae commodi sed distinctio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem omnis eum blanditiis voluptate, alias eveniet eligendi earum praesentium. Itaque ad sint, tempore nihil iure nobis quis sunt quas odit excepturi.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, officia. Quos natus animi nihil, delectus odio saepe iste ullam molestiae nostrum provident distinctio, pariatur soluta. In magnam ipsam perspiciatis repellendus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis provident incidunt, quisquam ab, doloremque sed expedita perspiciatis, omnis debitis vero molestiae illo deserunt in sit illum a suscipit laudantium at. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur blanditiis exercitationem magnam deleniti mollitia ex! Similique incidunt suscipit hic iusto error vitae, aliquam deserunt. Officiis aperiam in magni sint libero?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem aspernatur ea, deleniti sit deserunt provident tempora cupiditate vel quae modi aut maiores! Sint corporis tempora ullam vel voluptas odit laborum? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, dignissimos at doloribus dolorem aliquid cupiditate minima cumque impedit voluptas soluta temporibus repudiandae velit porro accusantium inventore rerum odio aperiam maiores? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt earum debitis sapiente iure quisquam laudantium quam assumenda, nobis ea aperiam commodi cupiditate reprehenderit ex atque consectetur dolorum vitae non amet?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A eius deleniti non quas modi possimus assumenda hic omnis earum? Animi ad nam quia repellat cupiditate! Voluptatum reiciendis obcaecati debitis omnis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti minima quas facere repellat reiciendis corrupti nam necessitatibus similique eos eius, reprehenderit dicta recusandae consequuntur quia ex incidunt facilis corporis nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatum corporis quibusdam exercitationem maxime? Autem veniam minus, voluptates quibusdam accusamus pariatur aperiam architecto error, possimus maiores deserunt ipsa rerum fuga?</p>
     </main>
 </body>
 </html>
