--- a/exercicios/ex026/mq002/index.html
+++ b/exercicios/ex026/mq002/index.html
@@ -14,6 +14,6 @@
     </style>
 </head>
 <body>
-    <h1>Mude a orientação do seu celular</h1>
+    <h1>Mude a orientação do seu dispositivo</h1>
 </body>
 </html>
